force-app/main/default/objects/xDO_TTHAIR_PAX__c/xDO_TTHAIR_PAX__c.object-meta.xml
<CustomObject>
    <label>TTH PAX</label>
    <nameField>
        <displayFormat>PX-{000000}</displayFormat>
        <label>PAX#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAX</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>