force-app/main/default/objects/xDO_TTHAIR_PAX__c/fields/xDO_TTHAIR_Email__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Email__c</fullName>
    <formula>xDO_TTHAIR_Passenger__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>