force-app/main/default/objects/xDO_TTHAIR_PAX__c/fields/xDO_TTHAIR_Mobile__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Mobile__c</fullName>
    <formula>xDO_TTHAIR_Passenger__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>