force-app/main/default/objects/xDO_TTHAIR_PAX__c/fields/xDO_TTHAIR_Passenger__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>