force-app/main/default/objects/xDO_TTHAIR_PAX__c/fields/xDO_TTHAIR_PNR__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR__c</fullName>
    <label>PNR</label>
    <referenceTo>xDO_TTHAIR_PNR__c</referenceTo>
    <relationshipName>PAX</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>