force-app/main/default/objects/xDO_TTHAIR_PAX__c/fields/xDO_TTHAIR_Ticket__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>xDO_TTHAIR_Ticket__c</referenceTo>
    <relationshipName>PAX</relationshipName>
    <type>Lookup</type>
</CustomField>